Theme/Layout/scrollbars.css
/*==========================================================
    MODULE

    Name:
    Scrollbars

    Theme:
    Vampire: The Masquerade - Bloodlines Discord Theme

    Description:
    Global scrollbar styling.

==========================================================*/


/*==========================================================
    Root
==========================================================*/

:root{

    --scrollbar-width:4px;
    --scrollbar-width-hover:6px;

    --scrollbar-radius:3px;

}


/*==========================================================
    Global Scrollbars
==========================================================*/

*::-webkit-scrollbar{

    width:

        var(--scrollbar-width);

    height:

        var(--scrollbar-width);

    transition:

        width var(--layout-transition);

}


/*==========================================================
    Track
==========================================================*/

*::-webkit-scrollbar-track{

    background:

        color-mix(
            in srgb,
            var(--color-bg-2) 92%,
            transparent
        );

}


/*==========================================================
    Thumb
==========================================================*/

*::-webkit-scrollbar-thumb{

    background:

        linear-gradient(

            180deg,

            var(--color-blood-200),

            var(--color-blood-300),

            var(--color-blood-400)

        );

    border-radius:

        var(--scrollbar-radius);

    border:

        1px solid

        color-mix(
            in srgb,
            var(--color-bg-1) 45%,
            transparent
        );

    transition:

        background var(--layout-transition),
        width var(--layout-transition),
        filter var(--layout-transition);

}


/*==========================================================
    Hover
==========================================================*/

*::-webkit-scrollbar:hover{

    width:

        var(--scrollbar-width-hover);

}


*::-webkit-scrollbar-thumb:hover{

    background:

        linear-gradient(

            180deg,

            var(--color-blood-100),

            var(--color-blood-200),

            var(--color-blood-300)

        );

    filter:

        brightness(1.08);

}


/*==========================================================
    Active
==========================================================*/

*::-webkit-scrollbar-thumb:active{

    background:

        linear-gradient(

            180deg,

            var(--color-blood-100),

            var(--color-blood-100),

            var(--color-blood-200)

        );

}


/*==========================================================
    Corner
==========================================================*/

*::-webkit-scrollbar-corner{

    background:

        transparent;

}

